[project]
name = "ofp"
version = "1.1.1"
description = "CLI to visualize Open Finance Participant information"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "thefuzz>=0.22.1",
    "typer>=0.15.1",
]


[tool.setuptools]
packages = ["ofp"]

[project.scripts]
ofp = "ofp.ofp:app"